tests/errors/syn_call8.java
public class syn_call8{
public static void main(String[] args){
 method(4, ) ;
}
}